--- a/docs/docs/model-registry/index.mdx
+++ b/docs/docs/model-registry/index.mdx
@@ -38,6 +38,8 @@ The Model Registry introduces a few concepts that describe and facilitate the fu
     Each registered model can have one or many versions. When a new model is added to the Model Registry, it is added as version 1. Each new model registered to
     the same model name increments the version number. Model versions have tags, which can be useful for tracking attributes of the model version (e.g. _`pre_deploy_checks: "PASSED"`_)
   </dd>
+    #### Model URI
+    You can refer to the registered model by using a URI of this format: "models:/<model-name>/<model-version>", e.g., if you have a registered model with name "MyModel" and version 1, the URI referring to the model is: "models/MyModel/1".
   <dt>
     #### Model Alias \{#using-registered-model-aliases}
   </dt>
