--- a/docs/docs/model-registry/index.mdx
+++ b/docs/docs/model-registry/index.mdx
@@ -42,7 +42,7 @@ The Model Registry introduces a few concepts that describe and facilitate the fu
     #### Model URI
   </dt>
   <dd>
-    You can refer to the registered model by using a URI of this format: "models:/<model-name>/<model-version>", e.g., if you have a registered model with name "MyModel" and version 1, the URI referring to the model is: "models/MyModel/1".
+    You can refer to the registered model by using a URI of this format: `models:/<model-name>/<model-version>`, e.g., if you have a registered model with name "MyModel" and version 1, the URI referring to the model is: `models:/MyModel/1`".
   </dd>
   <dt>
     #### Model Alias \{#using-registered-model-aliases}
