--- a/docs/docs/mlflow-3/breaking-changes.mdx
+++ b/docs/docs/mlflow-3/breaking-changes.mdx
@@ -2,20 +2,20 @@
 
 MLflow 3 introduces the following breaking changes:
 
-- [Recipes] Remove Recipe feature (#15250, @WeichenXu123)
-- [Tracking, Models] Remove `fastai` flavor (#15255, @WeichenXu123)
-- [Models] Remove `example_no_conversion` argument from model logging APIs (#15322, @WeichenXu123)
-- [Models] Remove `mleap` flavor (#15259, @WeichenXu123)
-- [AI Gateway] Remove 'routes' and 'route_type' config keys in gateway server configuration (#15331, @WeichenXu123)
-- [Deployments] Remove MLflow deployment server application and start-server CLI command (#15327, @WeichenXu123)
-- [Tracking] Remove `run_uuid` attribute from `RunInfo` object (#15342, @WeichenXu123)
-- [Evaluate] Remove `higher_is_better` argument from the constructor of class `MetricThreshold` (#15343, @WeichenXu123)
-- [Evaluate] Remove `baseline_model` and relevant arguments from the evaluation API (#15362, @WeichenXu123)
-- [Evaluate] Remove `custom_metrics` argument from the evaluation API (#15361, @WeichenXu123)
-- [Models] Remove the environment variable MLFLOW_GCS_DEFAULT_TIMEOUT configuration (#15365, @WeichenXu123)
-- [Tracking] Remove run tags `mlflow.gitBranchName` and `mlflow.gitRepoURL` (#15366, @WeichenXu123)
-- [Models] Remove `signature_dict` property from `ModelInfo` object (#15367, @WeichenXu123)
-- [Models] Remove `code_path` argument from model logging and model saving APIs (#15368, @WeichenXu123)
-- [Models] Remove torch flavor `requirements_file` argument from `pytorch` flavor model logging and model saving APIs (#15369, @WeichenXu123)
-- [Tracking] Remove `every_n_iter` parameter from tensorflow autologging (#15412, @WeichenXu123)
-- [Models] Remove `inference_config` argument from `transformers` flavor model logging and model saving APIs (#15415, @WeichenXu123)
+- [Recipes] Remove MLflow Recipes (#15250)
+- [Tracking, Models] Remove `fastai` flavor (#15255)
+- [Models] Remove `example_no_conversion` parameter from model logging APIs (#15322)
+- [Models] Remove `mleap` flavor (#15259)
+- [AI Gateway] Remove 'routes' and 'route_type' config keys in gateway server configuration (#15331)
+- [Deployments] Remove MLflow deployment server application and `start-server` CLI command (#15327)
+- [Tracking] Remove `run_uuid` attribute from `RunInfo` object (#15342)
+- [Evaluate] Remove `higher_is_better` parameter from the constructor of class `MetricThreshold` (#15343)
+- [Evaluate] Remove `baseline_model` and relevant parameters from the evaluation API (#15362)
+- [Evaluate] Remove `custom_metrics` parameter from the evaluation API (#15361)
+- [Models] Remove the environment variable `MLFLOW_GCS_DEFAULT_TIMEOUT` configuration (#15365)
+- [Tracking] Remove run tags `mlflow.gitBranchName` and `mlflow.gitRepoURL` (#15366)
+- [Models] Remove `signature_dict` property from `ModelInfo` object (#15367)
+- [Models] Remove `code_path` parameter from model logging and model saving APIs (#15368)
+- [Models] Remove `requirements_file` parameter from `pytorch` flavor model logging and model saving APIs (#15369)
+- [Tracking] Remove `every_n_iter` parameter from tensorflow autologging (#15412)
+- [Models] Remove `inference_config` parameter from `transformers` flavor model logging and model saving APIs (#15415)
