--- a/docs/docs/mlflow-3/breaking-changes.mdx
+++ b/docs/docs/mlflow-3/breaking-changes.mdx
@@ -2,20 +2,20 @@
 
 MLflow 3 introduces the following breaking changes:
 
-- [Recipes] Remove MLflow Recipes (#15250)
-- [Tracking, Models] Remove `fastai` flavor (#15255)
-- [Models] Remove `example_no_conversion` parameter from model logging APIs (#15322)
-- [Models] Remove `mleap` flavor (#15259)
-- [AI Gateway] Remove 'routes' and 'route_type' config keys in gateway server configuration (#15331)
-- [Deployments] Remove MLflow deployment server application and `start-server` CLI command (#15327)
-- [Tracking] Remove `run_uuid` attribute from `RunInfo` object (#15342)
-- [Evaluate] Remove `higher_is_better` parameter from the constructor of class `MetricThreshold` (#15343)
-- [Evaluate] Remove `baseline_model` and relevant parameters from the evaluation API (#15362)
-- [Evaluate] Remove `custom_metrics` parameter from the evaluation API (#15361)
-- [Models] Remove the environment variable `MLFLOW_GCS_DEFAULT_TIMEOUT` configuration (#15365)
-- [Tracking] Remove run tags `mlflow.gitBranchName` and `mlflow.gitRepoURL` (#15366)
-- [Models] Remove `signature_dict` property from `ModelInfo` object (#15367)
-- [Models] Remove `code_path` parameter from model logging and model saving APIs (#15368)
-- [Models] Remove `requirements_file` parameter from `pytorch` flavor model logging and model saving APIs (#15369)
-- [Tracking] Remove `every_n_iter` parameter from tensorflow autologging (#15412)
-- [Models] Remove `inference_config` parameter from `transformers` flavor model logging and model saving APIs (#15415)
+- [Recipes] Remove MLflow Recipes ([#15250](https://github.com/mlflow/mlflow/pull/15250))
+- [Tracking, Models] Remove `fastai` flavor ([#15255](https://github.com/mlflow/mlflow/pull/15255))
+- [Models] Remove `example_no_conversion` parameter from model logging APIs ([#15322](https://github.com/mlflow/mlflow/pull/15322))
+- [Models] Remove `mleap` flavor ([#15259](https://github.com/mlflow/mlflow/pull/15259))
+- [AI Gateway] Remove 'routes' and 'route_type' config keys in gateway server configuration ([#15331](https://github.com/mlflow/mlflow/pull/15331))
+- [Deployments] Remove MLflow deployment server application and `start-server` CLI command ([#15327](https://github.com/mlflow/mlflow/pull/15327))
+- [Tracking] Remove `run_uuid` attribute from `RunInfo` object ([#15342](https://github.com/mlflow/mlflow/pull/15342))
+- [Evaluate] Remove `higher_is_better` parameter from the constructor of class `MetricThreshold` ([#15343](https://github.com/mlflow/mlflow/pull/15343))
+- [Evaluate] Remove `baseline_model` and relevant parameters from the evaluation API ([#15362](https://github.com/mlflow/mlflow/pull/15362))
+- [Evaluate] Remove `custom_metrics` parameter from the evaluation API ([#15361](https://github.com/mlflow/mlflow/pull/15361))
+- [Models] Remove the environment variable `MLFLOW_GCS_DEFAULT_TIMEOUT` configuration ([#15365](https://github.com/mlflow/mlflow/pull/15365))
+- [Tracking] Remove run tags `mlflow.gitBranchName` and `mlflow.gitRepoURL` ([#15366](https://github.com/mlflow/mlflow/pull/15366))
+- [Models] Remove `signature_dict` property from `ModelInfo` object ([#15367](https://github.com/mlflow/mlflow/pull/15367))
+- [Models] Remove `code_path` parameter from model logging and model saving APIs ([#15368](https://github.com/mlflow/mlflow/pull/15368))
+- [Models] Remove `requirements_file` parameter from `pytorch` flavor model logging and model saving APIs ([#15369](https://github.com/mlflow/mlflow/pull/15369))
+- [Tracking] Remove `every_n_iter` parameter from tensorflow autologging ([#15412](https://github.com/mlflow/mlflow/pull/15412))
+- [Models] Remove `inference_config` parameter from `transformers` flavor model logging and model saving APIs ([#15415](https://github.com/mlflow/mlflow/pull/15415))
