fix links and adjust references
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/docs/getting-started/index.mdx
+++ b/docs/docs/getting-started/index.mdx
@@ -3,6 +3,7 @@ sidebar_position: 3
 ---
 
 import { CardGroup, PageCard } from "@site/src/components/Card";
+import Link from "@docusaurus/Link";
 
 # Getting Started with MLflow
 
@@ -10,6 +11,11 @@ If you're new to MLflow or seeking a refresher on its core functionalities, the
 quickstart tutorials here are the perfect starting point. They will guide you
 step-by-step through fundamental concepts, focusing purely on a task that will maximize your understanding of
 how to use MLflow to solve a particular task.
+
+:::tip
+If you'd like to try a free trial of a fully-managed MLflow experience on Databricks, you can quickly sign up and start using MLflow for your GenAI and ML project needs without having to configure, setup, and run your own tracking server. You can learn more about the
+<Link to="/getting-started/databricks-trial" target="_blank">Databricks Free Trial </Link> here. This trial offers full access to a personal Databricks account that includes MLflow and other tightly integrated AI services and features.
+:::
 
 ## Guidance on Running Tutorials
 
