--- a/docs/docs/getting-started/running-notebooks/index.mdx
+++ b/docs/docs/getting-started/running-notebooks/index.mdx
@@ -47,8 +47,8 @@ While this mode is the easiest way to get started, it is not recommended for gen
 <br />
 
 :::tip
-💡 If you are not an Databricks user but want to try out its managed MLflow experience for free, we recommend using the
-<Link to="/databricks-trial.html" target="_blank">Databricks Free Trial </Link>. It offers an expedited access for a Databricks workspace and services with limited credits and time periods, let you get started with MLflow and other ML/AI tools in minutes.
+💡 If you are not a Databricks user but want to try out its managed MLflow experience for free, we recommend using the
+<Link to="/getting-started/databricks-trial" target="_blank">Databricks Free Trial </Link>. It offers a personal Databricks account with service credits that are valid for a limited time period, letting you get started with MLflow and other ML/AI tools in minutes.
 :::
 
 ## 4. Connecting Notebook with Tracking Server
