--- a/docs/docs/getting-started/databricks-trial/index.mdx
+++ b/docs/docs/getting-started/databricks-trial/index.mdx
@@ -9,10 +9,15 @@ import { APILink } from "@site/src/components/APILink";
 The [Databricks Free Trial](https://docs.databricks.com/en/getting-started/free-trial.html) offers an opportunity to experience the Databricks platform without prior cloud provider access.
 Most Databricks features, including full MLflow functionality are available during the trial period, allowing you to explore the platform with trial credits.
 You create account with your email only and won't get charged unless you decide to upgrade to a paid plan and register your payment information.
-To get started with Databricks Free Trial, visit the [Databricks Trial Signup Page](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS)
-and follow the instructions outlined there. It takes about 5 minutes to set up, after which you'll have access to a nearly fully functional Databricks Workspace for logging your tutorial experiments, traces, models, and artifacts.
 
-Do you already have a Databricks trial account? [Click here](https://login.databricks.com/?destination_url=/ml/experiments&dbx_source=MLFLOW_DOCS&source=MLFLOW_DOCS) if you'd like to login and visit the MLflow UI.
+## Start your trial
+
+To get started with Databricks Free Trial, visit the [Databricks Trial Signup Page](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS)
+and follow the instructions outlined there. It takes about 5 minutes to set up, after which you'll have access to a nearly fully-functional Databricks Workspace for logging your tutorial experiments, traces, models, and artifacts.
+
+:::tip
+Do you already have a Databricks trial account? [Click here](https://login.databricks.com/?destination_url=/ml/experiments&dbx_source=MLFLOW_DOCS&source=MLFLOW_DOCS) if you'd like to login and get back to the MLflow UI.
+:::
 
 ## First Steps
 
