--- a/docs/docs/deployment/deploy-model-to-kubernetes/index.mdx
+++ b/docs/docs/deployment/deploy-model-to-kubernetes/index.mdx
@@ -15,7 +15,7 @@ import { APILink } from "@site/src/components/APILink";
 By default, MLflow deployment uses [Flask](https://flask.palletsprojects.com/en/1.1.x), a widely used WSGI web application framework for Python,
 to serve the inference endpoint. However, Flask is mainly designed for a lightweight application and might not be suitable for production use cases
 at scale. To address this gap, MLflow integrates with [MLServer](https://mlserver.readthedocs.io/en/latest) as an alternative deployment option, which is used
-as a core Python inference server in Kubernetes-native frameworks like [Seldon Core](https://docs.seldon.io/projects/seldon-core/en/latest) and
+as a core Python inference server in Kubernetes-native frameworks like [Seldon Core](https://docs.seldon.ai/seldon-core-2) and
 [KServe](https://kserve.github.io/website) (formerly known as KFServing). Using MLServer, you can take advantage of the scalability and reliability
 of Kubernetes to serve your model at scale. See [Serving Framework](/deployment/deploy-model-locally#serving-frameworks) for the detailed comparison between Flask and MLServer,
 and why MLServer is a better choice for ML production use cases.
@@ -61,7 +61,7 @@ If you need to install Java for other flavors, e.g. custom Python model that use
 Please refer to the following partner documentations for deploying MLflow Models to Kubernetes using MLServer. You can also follow the tutorial below to learn the end-to-end process including environment setup, model training, and deployment.
 
 - [Deploy MLflow models with KServe InferenceService](https://kserve.github.io/website/latest/modelserving/v1beta1/mlflow/v2)
-- [Deploy MLflow models to Seldon Core](https://docs.seldon.io/projects/seldon-core/en/latest/servers/mlflow.html)
+- [Deploy MLflow models to Seldon Core](https://docs.seldon.ai/seldon-core-2/user-guide/examples/model-zoo#mlflow-wine-model)
 
 ## Tutorial
 
