--- a/docs/docs/genai/index.mdx
+++ b/docs/docs/genai/index.mdx
@@ -10,4 +10,22 @@ import { ApiLink } from "@site/src/components/APILink"
 
 # MLflow for GenAI
 
+## H2 content
+
+### H3 content
+
+paragraph
+
+:::tip
+some tip
+:::
+
+:::note
+some note
+:::
+
+#### H4 content
+
+##### H5 content
+
 This is placeholder text.
