--- a/docs/docs/llms/responses-agent-intro/responses-intro.mdx
+++ b/docs/docs/llms/responses-agent-intro/responses-intro.mdx
@@ -1,6 +1,11 @@
 import { APILink } from "@site/src/components/APILink";
 
-## Responses API intro
+# Responses API intro
+
+The Responses API, introduced by OpenAI, is a superset of features that the Chat Completions API (largely shared by ChatModel and ChatAgent) had. See their documentation for more details:
+
+- [Responses vs Chat Completions](https://platform.openai.com/docs/guides/responses-vs-chat-completions)
+- [Responses API Docs](https://platform.openai.com/docs/api-reference/responses)
 
 ### Standard Text Response
 
