--- a/docs/docs/llms/responses-agent-intro/responses-api-intro.mdx
+++ b/docs/docs/llms/responses-agent-intro/responses-api-intro.mdx
@@ -1,11 +1,13 @@
 import { APILink } from "@site/src/components/APILink";
 
-# Responses API intro
+# Responses API Introduction
 
-The Responses API, introduced by OpenAI, is a superset of features that the Chat Completions API (largely shared by ChatModel and ChatAgent) had. See their documentation for more details:
+The Responses API, introduced by OpenAI, is a superset of features that the Chat Completions API had (largely shared by <APILink fn="mlflow.pyfunc.ChatModel">`ChatModel`</APILink> and <APILink fn="mlflow.pyfunc.ChatAgent">`ChatAgent`</APILink>). See their documentation for more details:
 
 - [Responses vs Chat Completions](https://platform.openai.com/docs/guides/responses-vs-chat-completions)
 - [Responses API Docs](https://platform.openai.com/docs/api-reference/responses)
+
+Below are some of the differences in representation for common use cases between the two APIs.
 
 ### Standard Text Response
 
